práca na DP 29.1. - Slovensko

--- a/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
+++ b/DiplomaThesis/ctx-thesis-v20230801/diplomova-praca-xlysova.tex
@@ -63,6 +63,9 @@ Európska komisia a Rada prejednávajú rozdhodnutie o politickom programe "Cest
 
 Graf na \in{obrázku}[obr:DESI] ukazuje porovnanie jednotlivých oblastí indexu DESI s priemerom 27 členských štátov EÚ. Taktiež je tam zobrazený aj výsledok krajiny s najvyšším skóre (Fínsko) \scr(Európska komisia - Česko, 2022).
 
+\pkap[dizajn-system]{Jednotným dizajn manuálom elektronických služieb}
+haha
+
 \pkap{Súčasný stav digitálnej verejnej správy v Česku}
 
 Posunom doby sa stále viac vecí spojených s verejnou správou dá riešiť online. Zamestnávatelia sa stretávajú na pravidelnej báze s rôznymi procesmi nutnými k chodu podniku a potrebujú mať všetko v súlade so zákonmi a pravidlami verejnej správy. Aktuálne to musia všetko riešiť buď osobne na úradoch alebo v tom lepšom prípade online na rôznych portáloch verejnej správy.
@@ -74,8 +77,15 @@ Príkladom EMMA služby je nástup zamestnanca do zamestnania. Povinnosťou zame
 Táto služba spolu s ďalšími bude uvedená na trh po ukončení realizácie projektu, čo môže výrazne zjednodušiť biznis procesy podnikov. 
 
 \pkap{Súčasný stav digitálnej verejnej správy v zahraničí}
-\TODO
-TODO
+V tejto kapitole a jej podkapitolách je zanalyzovaná a popísaná situácia v krajinách, ktoré sú buď blízko Českej republike (polohou, kultúrou, rozvinutosťou...) alebo krajiny, o ktorých je známe, že nejakým spôsobom v oblasti digitálnych služieb vynikajú.
+
+\ppkap{Slovensko}
+Začnem Slovenskom, ako najbližším susedom Českej republiky. Na Slovensku existuje množstvo elektronických služieb verejnej správy, ktoré sú dostupné prostredníctvom Ústredného portálu verejnej správy (ÚPVS). Tento portál umožňuje centrálne vykonávať elektronickú úradnú komunikáciu s rôznymi orgánmi verejnej moci a pristupovať k spoločným modulom. %Jeho dizajn je ale pomerne zastaralý a neprehľadný (viď \in{obrázok}[obr:portal\_sk]).
+
+Na základe analýzy tohto portálu je možné tvrdiť, že Slovenská republika sa zatiaľ špecializuje viac na vzťah občan-štát, ako na vzťah občan-zamestnávateľ-štát. V popredí je oblasť e-financovania, hlavne situácie týkajúce sa daní. Ministerstvo financií Slovenskej republiky v spolupráci s daňovými úradmi zaviedlo štandardizovaný proces pre elektronické prenosy faktúr a to prostredníctvom Informačného systému elektronickej fakturácie (IS EFA), ktorý umožňuje odosielanie štruktúrovaných elektronických fakturačných údajov do slovenskej daňovej správy. Používanie tohto IS bude časom povinné pre inštitúcie štátnej správy, verejnej správy a taktiež pre podnikateľov, ktorí im dodávajú tovary a služby. Tento systém je v princípe podobný systému e-kasa, ktorý prepája všetky slovenské registračné pokladnice s online portálom slovenskej daňovej správy \scr(Kilinger, 2023; MFSR, 2024). Portály eKasa a eFaktúry už podliehajú Jednotným dizajn manuálom elektronických služieb (viac informácií v \in{kapitole}[dizajn-system]).
+
+%\obrazekB{obr:portal\_sk}
+%{Ústredný portál verejnej správy SR (Slovensko.sk, 2024)}{images/portal_sk.png}{width=30cc}
 
 %\QUES Opravdu musím psát literární rešerši? 
 
@@ -444,6 +454,34 @@ TODO
  \rok{2023}
  \isbn{978-92-64-85180-1}
  \rozsah{234\stran}
+}
+
+\publW{
+\autor{Kilinger, A.}
+\nazev{Obligatory Slovakian Information System (IS EFA) for exchanging B2G and B2B E-Invoice}
+ \online{2024-01-29}
+ \www{https://blog.seeburger.com/new-obligatory-slovakian-information-system-is-efa-for-b2g-and-b2b-e-invoicing/}
+\issn{978-92-64-85180-1}
+ \nazevdok{SEEBURGER}
+ \rok{2023}
+}
+
+\publW{
+ \autorkorp{Ministerstvo financií Slovenskej republiky}
+ \nazev{Informačný systém elektronickej fakturácie - BETA}
+ \online{2024-01-29}
+ \www{https://web-einvoice-demo.mypaas.vnet.sk/}
+ \nazevdok{e-Faktúra}
+ \rok{©~2024}
+}
+
+\publW{
+ \autorkorp{Slovensko.sk}
+ \nazev{Ústredný portál verejnej správy}
+ \online{2024-01-29}
+ \www{https://www.slovensko.sk/sk/titulna-stranka}
+ \nazevdok{Slovensko.sk}
+ \rok{©~2024}
 }
 
 \ebib
